[package]
name = "tosts"
version = "0.2.2"
edition = "2024"
description = "tosts"
license="MIT"

[dependencies]
clap={version="4", features=["derive"]}
tracing-subscriber="0.3.22"
tracing="0.1.44"
rlimit="0.10.2"

wait-timeout="0.2.1"
indicatif = { version = "0.18", features = ["rayon"] }
rayon = "1.11.0"